# embedded-hal-ti

./: CMakeLists.txt  CMakePresets.json  README.md  release-please-config.json
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  linting-formatting.yml  release-please.yml  security.yml
doc/: EK-TM4C123GXL.md
examples/: CMakeLists.txt
examples/blink/: CMakeLists.txt  Main.cpp
examples/freertos/: CMakeLists.txt  Main.cpp
examples/terminal_and_peripherals/: CMakeLists.txt  Main.cpp
hal_tiva/: CMakeLists.txt
hal_tiva/cortex/: CMakeLists.txt  EventDispatcherCortex.cpp  InterruptCortex.cpp  Reset.cpp  Reset.hpp  SystemTick.cpp  SystemTick.hpp  SystemTickTimerService.cpp  SystemTickTimerService.hpp  TimeKeeper.cpp  TimeKeeper.hpp
hal_tiva/default_init/: CMakeLists.txt  DefaultInit.cpp
hal_tiva/instantiations/: CMakeLists.txt  DiscoveryTracerInfrastructure.hpp  DiscoveryUi.hpp  EventInfrastructure.cpp  EventInfrastructure.hpp  LaunchPadBsp.hpp  LaunchPadBspEkTm4c123g.hpp  LaunchPadBspEkTm4c1294.hpp  NucleoTracerInfrastructure.hpp  NucleoUi.hpp  StmEventInfrastructure.cpp  StmEventInfrastructure.hpp  StmTracerInfrastructure.cpp  StmTracerInfrastructure.hpp  TracerInfrastructure.cpp  TracerInfrastructure.hpp  TracingReset.cpp  TracingReset.hpp  TracingResetStm.cpp  TracingResetStm.hpp
hal_tiva/instantiations/lwip/: CMakeLists.txt  Ethernet.hpp  EthernetSmiObserver.cpp  EthernetSmiObserver.hpp
hal_tiva/synchronous_tiva/: CMakeLists.txt  SynchronousFlashInternalStm.cpp  SynchronousGpioStm.cpp  SynchronousSpiMaster.cpp  SynchronousSpiMaster.hpp  SynchronousSpiMasterStm.cpp  SynchronousSpiMasterStm.hpp  SynchronousUart.cpp  SynchronousUart.hpp  SynchronousUartStm.cpp  SynchronousUartStm.hpp  TimeKeeperStm.cpp  TimeKeeperStm.hpp
hal_tiva/tiva/: AnalogToDigitalPinStm.cpp  AnalogToDigitalPinStm.hpp  CMakeLists.txt  CanStm.cpp  CanStm.hpp  Clock.cpp  Clock.hpp  ClockTm4c123.cpp  ClockTm4c123.hpp  ClockTm4c129.cpp  ClockTm4c129.hpp  DefaultClockEkTm4c123gxl.cpp  DefaultClockEkTm4c123gxl.hpp  DigitalToAnalogPinStm.cpp  DigitalToAnalogPinStm.hpp  Dma.cpp  Dma.hpp  DmaStm.cpp  DmaStm.hpp  Ethernet.cpp  Ethernet.hpp  FlashInternalStm.cpp  Gpio.cpp  Gpio.hpp  GpioStm.cpp  GpioStm.hpp  I2cStm.cpp  I2cStm.hpp  PinoutTableDefault.cpp  PinoutTableDefault.hpp  PinoutTableDefaultStm.hpp  PinoutTableDefaultTm4c123.cpp  PinoutTableDefaultTm4c123.hpp  PinoutTableDefaultTm4c129.cpp  PinoutTableDefaultTm4c129.hpp  Pwm.cpp  Pwm.hpp  QuadratureEncoder.cpp  QuadratureEncoder.hpp  Reset.cpp  (+34 more)
tiva/: CMakeLists.txt  hal_driver.cmake
tiva/CMSIS/Device/TI/TM4C123/Source/Templates/: system_TM4C123.c
tiva/CMSIS/Device/TI/TM4C123/Source/Templates/gcc/: startup_TM4C123.c
tiva/CMSIS/Device/TI/TM4C129/Include/: TIVA.h  TM4C1294NCPDT.h
tiva/CMSIS/Device/TI/TM4C129/Source/Templates/: system_TM4C129.c
tiva/CMSIS/Device/TI/TM4C129/Source/Templates/gcc/: startup_TM4C129.c
tiva/ldscripts/: mem_tm4c123gh6pm.ld  mem_tm4c1294ncpdt.ld  sections.ld
